@@ -2,6 +2,7 @@
 v6.2.2-git
 ----------
 
+[mms] Fix displaying Virtual Trash mailbox (Bug #13418).
 [mms] Fix menu actions on the minimal message page (Bug #13440).
 [jan] Fix switching to HTML editor in basic mode if signature display is not
       active.
